GH-137 Refactor project
* begin refactor

* extract interfaces

* Update SentParcelsGui.java

* Rename UserService back to UserManager

* add new lines

* Change config library from CDN to Okaeri configs, remove Sentry

* Remove debug mode

* Finish general refactor

* update gradle config

* continue refactoring

* ItemBuilder -> PaperItemBuilder

* ItemBuilder -> PaperItemBuilder

* Refactor

* Refactor GUI buttons

* Continue refactor

* Refactor GUI dependencies

* continue refactoring services, isolate repositories

* more refactoring...

* change persister type class

* Simplify ReceiverGui

* fix gui issues

* Beautify GUI classes

* Beautify configs, delete unnecessary tests

* find -> fetch, fix improper item type set in config

* fix gui stuff and immutable list supplying

* shifting items fix attempt

* shifting works but only in a certain order. atomic counter still does not work

* Fix shifting and refreshing

* Simplify PlaceholderUtil and CollectionGui through CompletableFutures

* Use CompletableFutures from spotify where applicable, clarify some comments

* Simplify .gitignore and .gitattributes

* change annotations, use expiring cache

* remove unused InventoryUtil#shiftItems method

* delete unnecessary comment

* better empty PageResult handling

* Update src/main/java/com/eternalcode/parcellockers/parcel/util/PlaceholderUtil.java

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>

* Update src/main/java/com/eternalcode/parcellockers/user/repository/UserRepositoryOrmLite.java

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>

* Fix potential CME

* fix build

* fix build

* move cache initialization to constructor

* Add Validation classes and architecture (suggestion from @noyzys)

* Implement validation

* Use CompletableFuture in Service/Manager-like classes

* Cache object after the cache is initialized

* ParcelStatus.PENDING -> IN_PROGRESS

* Add static import for AdventureUtil.resetItalic

* Delete u